vercre-vp/src/snapshots/vercre_vp__invoke__tests__cd-state.snap
---
source: vercre-vp/src/invoke.rs
assertion_line: 282
expression: state
---
expires_at: "[expires_at]"
request_object:
  response_type: vp_token
  client_id: "http://vercre.io/post"
  response_mode: direct_post
  response_uri: "http://vercre.io/post"
  nonce: "[nonce]"
  state: "[state]"
  presentation_definition: "[presentation_definition]"
  client_id_scheme: redirect_uri
  client_metadata: "[client_metadata]"
