vercre-vp/src/snapshots/vercre_vp__invoke__tests__sd-response.snap
---
source: vercre-vp/src/invoke.rs
assertion_line: 237
expression: response
---
request_object:
  response_type: vp_token
  client_id: "http://credibil.io/callback"
  nonce: "[nonce]"
  state: "[state]"
  presentation_definition: "[presentation_definition]"
  client_id_scheme: redirect_uri
  client_metadata: "[client_metadata]"
